<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ATM Goliath National Bank</string>
    
    <string name="logo_description">GNB</string>
    
    <string name="agency">Agência</string>
    <string name="account">Conta</string>
    <string name="access">Acesso</string>
    
    <string name="what_is_your_name">Qual é o seu nome?</string>
    <string name="password">Senha</string>
    <string name="back">Voltar</string>

    <string name="withdraw">Sacar</string>
    <string name="deposit">Depositar</string>
    <string name="balance">Extrato</string>
    <string name="logout">Sair</string>
    <string name="doc">DOC</string>
    <string name="ted">TED</string>
    <string name="statement">Extrato</string>
    <string name="boleto">Boleto</string>
    
    <string name="welcome_msg">Olá ?</string>
    
    <string name="notes_available">Notas disponiveis ?</string>
    <string name="withdraw_value">Qual valor deseja sacar?</string>
    <string name="error">Erro</string>
    
    <string name="deposit_value">Qual valor deseja depositar?</string>
    
    <string name="balance_value">Seu saldo é de ?</string>
    
    <string name="in_progress">Em progresso</string>
    <string name="loading">Carregando</string>
    
    <string name="generic_error">Houve um erro, certifique-se que você esta conectado a internet.</string>
    <string name="account_not_found">Conta não encontrada</string>
   	<string name="account_inative">Conta inativa</string>
   	<string name="account_without_clients">Conta sem clientes</string>
   	
   	<string name="withdraw_success">Saque realizado</string>
   	<string name="fail_withdraw_success">Saldo insulficiente</string>
   	<string name="withdraw_insufficient_notes">Notas insulficientes no dispensador.</string>
   	<string name="withdraw_invalid_value">Valor invalido</string>
   	
   	<string name="invalid_deposit">Valor inválido para deposito</string>
   	<string name="success_deposit">Deposito realizado com sucesso</string>
   	<string name="error_deposit">Erro ao realizar deposito</string>
   	
   	<string name="bank_code_label">Código do banco:(1 = Goliath; 2 = Universal)</string>
   	<string name="value">Valor</string>
   	<string name="transfer">Transferir</string>
   	
   	<string name="error_max_value_doc">Valor máximo do DOC é de 1000 reais, acima deste valor utilize TED.</string>
   	<string name="doc_ted_ok">Transção enviada, consulte extrato para confirmar tranferência.</string>
   	<string name="to_ted">Para:</string>
   	<string name="select_a_pf">Selecione uma pessoa física.</string>
</resources>