<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/gnb" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_name"
        android:text="@string/welcome_msg"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/logo"
        android:textColor="@color/black"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/txt_name"
        android:weightSum="2"
        android:id="@+id/first_line"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/withdraw"
            android:onClick="withdraw" />
        
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/deposit"
            android:onClick="deposit" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/first_line"
        android:weightSum="2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/balance"
            android:onClick="balance" />
        
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logout"
            android:onClick="logOut" />
    </LinearLayout>

</RelativeLayout>