<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/gnb" />

    <Button
        android:id="@+id/back_bnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/logo"
        android:onClick="back"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/back" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back_bnt"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title_deposit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/doc"
                android:textColor="@color/black"
                android:textStyle="bold" />
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/bank_code_label"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_bank_code"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="numberDecimal" />
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/agency"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_agency_code"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="numberDecimal" />
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_account_code"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="numberDecimal" />
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/value"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_value_doc"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="numberDecimal" />
            
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/transfer"
                android:onClick="doDoc" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>