<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/gnb" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_agency"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/agency"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_agency"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:inputType="number" />

            <TextView
                android:id="@+id/label_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:inputType="number" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="accessAccount"
                android:text="@string/access" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>